@@ -14,7 +14,7 @@ options.cc clockoptions.cc about.cc
 rglclock_SOURCES = profile.cc main.cc
 rglclock_LDADD = libclock.a libgdkgl.a ${GL_LIBS} ${GTK_LIBS}
 
-noinst_HEADERS = options.h profile.h glclock.h module.h simple.h autowidget.h gdkgl.h
+noinst_HEADERS = utils.h profile.h glclock.h module.h simple.h autowidget.h gdkgl.h
 
 man_MANS = rglclock.1
 
