@@ -1,5 +1,9 @@
 1999-05-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
+	* Makefile.am (noinst_HEADERS): Change options.h to utils.h.
+
+	* utils.h: Renamed from options.h.  Also change all includes.
+
 	* Makefile.am (dist-snapshot distcheck-snapshot): Add
 	distcheck-snapshot.  Modify version numbering for snapshots.
 
